# speed-py-using-rust

./: README.md  doubles.py
pyext-myrustlib/: Cargo.toml  pyproject.toml
pyext-myrustlib/src/: lib.rs
